--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1257,7 +1257,46 @@
   padding: 5px;
   width: 150px;
 }
+/* Minimalist Search Bar */
+.input-group.mb-3 {
+  margin-bottom: 0; /* Remove extra margin */
+}
 
+.form-control {
+  border: 1px solid #e3e4e8;
+  border-radius: 0; /* Remove border-radius */
+}
+
+.input-group-append {
+  background-color: transparent; /* Remove background color */
+  border: none; /* Remove border */
+}
+
+.btn-outline-secondary {
+  border: none; /* Remove border */
+  border-radius: 0; /* Remove border-radius */
+  color: #990000; /* Set text color to main color */
+}
+
+.btn-outline-secondary:hover {
+  background-color: transparent; /* Remove background color on hover */
+  color: #770000; /* Set text color on hover */
+}
+
+/* Minimalist Sort Dropdown */
+.form-group {
+  margin-bottom: 0; /* Remove extra margin */
+}
+
+.form-control {
+  border: 1px solid #e3e4e8;
+  border-radius: 0; /* Remove border-radius */
+}
+
+/* Center text vertically in the dropdown */
+.selectpicker {
+  padding: 0.375rem 1.75rem 0.375rem 0.75rem; /* Adjust padding */
+}
 .add-announcement-button button {
   background-color: #990000;
   color: #fff;
