--- a/public/css/user.css
+++ b/public/css/user.css
@@ -1,3 +1,6 @@
+body{
+     min-width: 576px;
+}
 /* NAVBAR CSS */
 .bg-crimson {
     background-color: #990000;
@@ -29,6 +32,8 @@ a.nav-link{
 .profile-section {
     padding: 30px;
 }
+
+
 
 
 
