--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1724,3 +1724,113 @@ tr:nth-child(even) {
 /* Styles for user management */
 /* Room Management Tab Table Styles */
 
+/* student profile CSS */
+.profile-section {
+  padding: 30px;
+}
+
+.profile- {
+  font-family: 'Abril Fatface', cursive;
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.Applicant-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.Applicant-info {
+  flex: 1;
+  text-align: center;
+}
+
+.profile-box {
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.profile-image-label {
+  cursor: pointer;
+}
+
+.profile-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-color: #eee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.profile-image i {
+  font-size: 5em;
+  color: #555;
+}
+
+h3 {
+  margin: 10px 0;
+}
+
+.text-muted {
+  color: #777;
+}
+
+.applicant-details {
+  flex: 2;
+  padding-left: 20px;
+}
+
+.details-box {
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.details-box h4 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.list-group-item {
+  border: none;
+  padding: 5px 0;
+}
+
+.list-group-item strong {
+  font-weight: bold;
+}
+
+/* Style for modal pop-ups */
+.modal-content {
+  padding: 20px;
+}
+
+.modal-header {
+  border: none;
+}
+
+.modal-footer {
+  justify-content: flex-end;
+  border: none;
+}
+
+.modal-title {
+  font-size: 20px;
+}
+
+/* Style for the backdrop of the modal */
+.modal-backdrop {
+  opacity: 0.5 !important;
+}
+
+/* Style for modal close button */
+.close {
+  font-size: 24px;
+  font-weight: bold;
+  opacity: 1;
+}
+
