--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -788,9 +788,10 @@ textarea.form-control {
 /* Chat Container */
 #chat-container {
     position: fixed;
+    
     bottom: 20px;
     right: 20px;
-    width: 320px; /* Increased width for a more spacious feel */
+    width: 250px; /* Increased width for a more spacious feel */
     background-color: #990000; /* Updated main color to #990000 */
     border-radius: 10px; /* Rounded corners */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -841,7 +842,7 @@ textarea.form-control {
 /* Message Input Field */
 #message-input {
     flex-grow: 1;
-    padding: 10px;
+    padding: 7px;
     border: none;
     background-color: transparent;
     color: #fff;
@@ -857,7 +858,8 @@ textarea.form-control {
     cursor: pointer;
     transition: background-color 0.3s ease;
     border-radius: 0 10px 10px 0;
-    margin-right: 10px;
+    margin-left: -28px;
+    padding-right: 1px;
 }
 
 /* Styling for icons */
