--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -483,7 +483,12 @@ why choose us section
 
 /* Contact section */
 .contact {
-    padding: 130px 0;
+    padding: 130px ;
+}
+.container-contact{
+    background-color: gray;
+    width: 700px;
+    border-radius: 7px;
 }
 
 .contact h2 {
