--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -485,6 +485,28 @@ why choose us section
 .contact {
     padding: 130px ;
 }
+.contact-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: -10px;
+}
+.position-relative {
+    position: relative;
+  }
+ 
+  
+  .overlay-text {
+    margin-top: 200px;
+    font-weight: bold;
+    position: absolute;
+    top: 0;
+    left: 5;
+    background-color: rgba(255, 255, 255, 0); 
+    padding: 20px;
+    
+  }
+  
 .contact-us{
     border: 1px solid gray;
 }
@@ -492,7 +514,7 @@ why choose us section
  display: flex;
  justify-content: center;
  align-items: center;
- height: 100vh; /* This sets the container to be 100% of the viewport height, adjust as needed */
+ height: 100vh; 
  border: 1px solid gray;
 }
 .container-contact{
