--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -500,7 +500,7 @@ why choose us section
     align-items: center;
     margin-left: -10px;
     border-radius: 10px;
-   opacity: 0.9;
+   opacity: 0.7;
 
 
 }
@@ -508,7 +508,7 @@ why choose us section
     position: relative;
   }
   .overlay-text {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     font-weight: bolder;
     position: absolute;
@@ -519,6 +519,10 @@ why choose us section
     color: #000000; 
     text-align: center; 
 }
+.right-text{
+    margin-left: 15px;
+}
+
 
 .overlay-text h6 {
     margin: 10px 0; 
