--- a/public/css/account.css
+++ b/public/css/account.css
@@ -125,6 +125,11 @@ width: 10px;
   padding-left: 19px;
   color: #a20202;
 }
+.alert-danger {
+  color: #721c24;
+  background-color: #ffffff; 
+   border-color: #ffffff; 
+}
 
 /* Add these styles to your existing CSS or in a separate <style> tag */
 .form-group {
