--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -133,6 +133,7 @@ hero section
 .hero .carousel-item img {
     height: 560px;
     width: 100%;
+    height: 100%;
 }
 
 .hero .carousel-item::before {
