--- a/public/css/account.css
+++ b/public/css/account.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Karla", sans-serif;
-  background-color: #d0d0ce;
+  background-color: #121212;
   min-height: 100vh; }
 .container{
   max-width: 850px; /* Adjust the width as needed */
@@ -197,4 +197,51 @@ width: 10px;
 
 .login-card-footer-text {
   margin: 15px 0; 
+}
+
+.bg {
+  animation:slide 3s ease-in-out infinite alternate;
+background-image: linear-gradient(-60deg, #ad151557 50%, #fff0 50%);
+    --dot-bg: transparent;
+    --dot-color: linear-gradient(-60deg, #ad151557 50%, #efefef 50%, #7806068f 50%);
+    --dot-size: 1px;
+    --dot-space: 20px;
+    background: linear-gradient(90deg, var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center / var(--dot-space) var(--dot-space), linear-gradient(var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center / var(--dot-space) var(--dot-space), var(--dot-color);
+    background-blend-mode: multiply;
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+.bg1 {
+  animation:slide 3s ease-in-out infinite reverse;
+background-image: linear-gradient(120deg, #ad151557 50%, #efefef 50%, #78060600 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
 }
