--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,7 +53,7 @@ header .nav-item .nav-link {
 .nav-linklogo {
     color: white;
     font-family: Georgia, serif;
-    font-weight: bold;
+  /*  font-weight: bold; */
     font-size: 15px;
 }
 /* Add some spacing and styling to the dropdown menu */
